--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,8 @@
   "rules": {
     "react/no-unescaped-entities": "off",
     "@next/next/no-img-element": "off"
+  },
+  "parserOptions": {
+    "project": "./tsconfig.json"
   }
 } 
